dark mode: fixing placeholder color of vue-select field

--- a/app/assets/stylesheets/bootstrap_layout.sass
+++ b/app/assets/stylesheets/bootstrap_layout.sass
@@ -41,6 +41,8 @@ body.theme-dark
       color: white
   .btn-white svg, a svg
     stroke: white
+  input.vs__search
+    color: white
 
 // Top bar
 // Make it a little transparent in order for the top-right ribbon to be shown
